Made till home section in both HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,41 @@
 <!doctype html>
+<html>
 <head> 
     <meta charset="UTF-8">
     <title> Aynansh Aadyant 
     </title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
+    <link href="styles.css" rel="stylesheet">
 </head>
+<body> 
+    <div class="header">
+        <div class="navigation">
+            <ul class="links">
+                <li class="header_links"> Home </li>
+                <li class="header_links"> About </li>
+                <li class="header_links"> Projects </li>
+                <li class="header_links"> Contact </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="home" id="home">
+        
+        <div class="image">
+            <img src="pics/IMG_2226.jpg" alt="" id="image_home">
+        </div>
+
+        <div class="text_home">
+            <h1 id="name_home">Aynansh Aadyant</h1>
+            <h3 id="desc_home"> Web Developer </h3>
+    </div>
+    </div>
+
+    <div class="about">
+
+    </div>
+    
+</body>
+</html>
