--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="header_links"> <a href="#home" >Home </a></li>
                 <li class="header_links"> <a href="#about">About</a> </li>
                 <li class="header_links"> <a href="#projects">Projects </a><li>
-                <li class="header_links"> Contact </li>
+                <li class="header_links"> <a href="contacts.html">Contact </a></li>
             </ul>
         </div>
     </div>
